Bug 958882 - Add script size limit for TI new-script analysis. r=djvj